--- a/src/index.css
+++ b/src/index.css
@@ -72,8 +72,9 @@ body{
 }
 .header__search-img{
     position: absolute;
-    top: 0;
-    right: 0;
+    right: 30px;
+    top: 10px;
+    width: 20px;
 }
 .header__search-input{
     margin-right: 20px;
